kubernetes-labs/lab-34-istio-multicluster-connectivity/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab-34-multicluster
  labels:
    istio-injection: enabled
